- Rev 263 - [2007/05/25] Tsusai - OnTouchCellEvent : made the ScriptNPC protected, and added  a readonly property. -

--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,11 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 263 -
+[2007/05/25] Tsusai - OnTouchCellEvent : made the ScriptNPC protected, and added
+ a readonly property.
+-
+
 - Rev 262 -
 [2007/05/25] Tsusai - Notes/Overview: Moved linux notes to bin folder, and updated
  it with the full list of required libraries.
