- Rev 273 - [2007/05/29] RaX - Added in #warp for the proof of concept release, this is a HACKED  IN ADDITION, do not expect it to stay, It'll be replaced by a much cleaner and better  behaving version at a later date. -

--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,12 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 273 -
+[2007/05/29] RaX - Added in #warp for the proof of concept release, this is a HACKED
+ IN ADDITION, do not expect it to stay, It'll be replaced by a much cleaner and better
+ behaving version at a later date.
+-
+
 - Rev 272 -
 [2007/05/29] Tsusai - LuaNPCCore - RunLuaNPCScript: Forgot to uncomment a test
  line and remove the pcall line.
