- Rev 276 - [2007/05/30] Tsusai - Updated Changelog. -

--- a/changelog.txt
+++ b/changelog.txt
@@ -15,11 +15,19 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 276 -
+[2007/05/30] Tsusai - Updated Changelog.
+-
+
+- Rev 275 -
+[2007/05/30] Tsusai - Tagged Release 1 (/tags/Release1_0.0.1.274)
+-
+
 --------------------------------------------------------------------------------
 Release 1
 --------------------------------------------------------------------------------
 - Rev 274 -
-[2007/05/29] Tsusai - RELEASE 1. See Release Notes.txt.
+[2007/05/30] Tsusai - RELEASE 1. See Release Notes.txt.
 -
 
 - Rev 273 -
